--- a/Solemate/View/Base.lproj/Main.storyboard
+++ b/Solemate/View/Base.lproj/Main.storyboard
@@ -134,6 +134,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hbp-kO-fTy">
+                                <rect key="frame" x="154" y="669" width="67" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start Test"/>
+                                <connections>
+                                    <segue destination="x6u-YF-5mR" kind="show" id="Btl-Md-kZK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="XUS-IC-MNq"/>
@@ -198,6 +206,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iTL-yw-wYi">
+                                <rect key="frame" x="163" y="688" width="67" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Start Test"/>
+                                <connections>
+                                    <segue destination="x6u-YF-5mR" kind="show" id="3mt-Hy-z2D"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="yxx-gF-Wk6"/>
@@ -211,96 +227,148 @@
             </objects>
             <point key="canvasLocation" x="-2126" y="1753"/>
         </scene>
-        <!--View Controller-->
+        <!--Start One View Controller-->
         <scene sceneID="qdh-cl-8f1">
             <objects>
-                <viewController id="x6u-YF-5mR" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StartOneViewController" id="x6u-YF-5mR" customClass="StartOneViewController" customModule="Solemate" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ye8-NW-SwS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rug-B8-Bh9">
-                                <rect key="frame" x="16" y="44" width="46" height="30"/>
+                                <rect key="frame" x="19" y="44" width="41" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Home"/>
+                                <connections>
+                                    <action selector="onHomePress:" destination="x6u-YF-5mR" eventType="touchUpInside" id="9bO-x8-pjI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6us-Dt-RdL">
-                                <rect key="frame" x="87" y="654" width="46" height="30"/>
+                                <rect key="frame" x="93" y="654" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="onBackPress:" destination="x6u-YF-5mR" eventType="touchUpInside" id="5gR-d2-meJ"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i8G-dD-tAo">
-                                <rect key="frame" x="259" y="653" width="46" height="30"/>
+                                <rect key="frame" x="266" y="653" width="32" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Next"/>
+                                <connections>
+                                    <segue destination="4R3-Y7-P50" kind="show" animates="NO" id="o5Y-0n-sfA"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a90-Fy-7Mv">
+                                <rect key="frame" x="19" y="364" width="340" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Walk for 30 seconds.
+Try your best to apply weight on your
+injured foot within the target range.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="0Zh-7R-UmK"/>
                     </view>
+                    <navigationItem key="navigationItem" id="uTn-Rm-9on"/>
+                    <connections>
+                        <outlet property="backButton" destination="6us-Dt-RdL" id="2hX-cb-kd6"/>
+                        <outlet property="homeButton" destination="rug-B8-Bh9" id="2X0-bd-SbX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7XU-hS-DRT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2540" y="2693"/>
+            <point key="canvasLocation" x="-3377" y="2867"/>
         </scene>
-        <!--View Controller-->
+        <!--Start Two View Controller-->
         <scene sceneID="2h7-QD-5AD">
             <objects>
-                <viewController id="4R3-Y7-P50" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StartTwoViewController" id="4R3-Y7-P50" customClass="StartTwoViewController" customModule="Solemate" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a50-s1-eip">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Nb-HR-fzz">
-                                <rect key="frame" x="16" y="44" width="46" height="30"/>
+                                <rect key="frame" x="19" y="44" width="41" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Home"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHq-3b-UCm">
-                                <rect key="frame" x="88" y="654" width="46" height="30"/>
+                                <rect key="frame" x="94" y="654" width="34" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="x6u-YF-5mR" kind="show" animates="NO" id="JMC-t1-t3G"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbr-Ph-lyc">
-                                <rect key="frame" x="260" y="653" width="46" height="30"/>
+                                <rect key="frame" x="267" y="653" width="32" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Next"/>
+                                <connections>
+                                    <segue destination="2y2-Lu-WVN" kind="show" animates="NO" id="Vd7-hB-Qnb"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oBi-8F-eqf">
+                                <rect key="frame" x="16" y="366" width="340" height="111"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">You will receive voice feedback when
+your applied weight is outside of the
+target range. Please adjust the weight based on the feedback.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="fkV-pE-jRs"/>
                     </view>
+                    <navigationItem key="navigationItem" id="AF8-yl-ihx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kKZ-dL-5wf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1730" y="2693"/>
+            <point key="canvasLocation" x="-2530" y="2867"/>
         </scene>
-        <!--View Controller-->
+        <!--Live Tracking View Controller-->
         <scene sceneID="0hJ-B3-DsU">
             <objects>
-                <viewController id="2y2-Lu-WVN" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LiveTrackingViewController" id="2y2-Lu-WVN" customClass="LiveTrackingViewController" customModule="Solemate" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YGt-TZ-iLY">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d8h-aC-vvu">
-                                <rect key="frame" x="16" y="44" width="46" height="30"/>
+                                <rect key="frame" x="19" y="44" width="41" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                                <state key="normal" title="Home"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xK-5h-12s">
                                 <rect key="frame" x="162" y="650" width="50" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Restart"/>
+                                <connections>
+                                    <segue destination="x6u-YF-5mR" kind="show" id="9KI-Hc-PaH"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RU0-6V-Fz7">
+                                <rect key="frame" x="162" y="156" width="51" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="qF8-0I-UJ1"/>
                     </view>
+                    <navigationItem key="navigationItem" id="1sB-QF-bzH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Wr-MY-6HW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-930" y="2693"/>
+            <point key="canvasLocation" x="-1730.4000000000001" y="2866.9950738916259"/>
         </scene>
         <!--Sign Up-->
         <scene sceneID="HZo-D2-HIC">
@@ -761,5 +829,6 @@
         <segue reference="M6F-nf-qkQ"/>
         <segue reference="fd5-Fe-wHZ"/>
         <segue reference="QqJ-LO-msu"/>
+        <segue reference="Btl-Md-kZK"/>
     </inferredMetricsTieBreakers>
 </document>
