created new data objects using new user UID to name associated FireStore document

--- a/Solemate/View/Base.lproj/Main.storyboard
+++ b/Solemate/View/Base.lproj/Main.storyboard
@@ -826,7 +826,7 @@ target range. Please adjust the weight based on the feedback.</string>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="M6F-nf-qkQ"/>
+        <segue reference="4Wm-Oa-sA5"/>
         <segue reference="fd5-Fe-wHZ"/>
         <segue reference="QqJ-LO-msu"/>
         <segue reference="Btl-Md-kZK"/>
